# xfile

./: .gitignore  CMakeLists.txt  README.md
source/: xfile.cpp  xfile.h
source/implementation/: xfile_inline.h
source/implementation/general/: xfile_device_general_ram.h
source/implementation/windows/: xfile_device_window_files.h
source/unit_tests/: xfile_unit_test.h
